update createRelease script